edits from heckman 5/1

--- a/abc_treatmenteffects_appendix.tex
+++ b/abc_treatmenteffects_appendix.tex
@@ -8,7 +8,7 @@
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Appendix \\ Gender Differences in the Benefits of a Prototypical Early Childhood Program}}
+\title{\Large \textbf{Appendix \\ Gender Differences in the Benefits of an Influential Early Childhood Program}}
 
 \author{Jorge Luis Garc\'{i}a, James J. Heckman, and Anna L. Ziff}
 \date{\today}
@@ -45,6 +45,10 @@
 \setcounter{figure}{0}  \renewcommand{\thefigure}{D.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{D.\arabic{table}}
 \input{Appendices/VSensitivity_treatmenteffects}
+
+\setcounter{figure}{0}  \renewcommand{\thefigure}{E.\arabic{figure}}
+\setcounter{table}{0}   \renewcommand{\thetable}{E.\arabic{table}}
+\input{Appendices/Genderdifferences}
 
 \end{appendices}
 
