--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -1,12 +1,13 @@
+This section reports estimates of treatment effects by outcome by gender, tests of equality of effects by outcome, gender, and \textbf{[Typist: This sentence ends abruptly and may need to be reorganized.]}
+
 \subsection{Estimated Treatment Effects}
 
-Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present the estimates of selected treatment effects for males and females respectively. The complete set of treatment effects are listed in Appendix~\ref{appendix:results}. Column (1) gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who did not attend alternative preschools. Column (4) gives standard matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) gives mean differences between the full treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.
+Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present the estimates of selected treatment effects for males and females respectively. \textbf{[JJH: Why these selected?]} The complete set of treatment effects are listed in Appendix~\ref{appendix:results}. Column (1) gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who did not attend alternative preschools. Column (4) gives standard matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) gives mean differences between the full treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.
 
 The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on the estimate that we consider; college graduation increases 13 percentage points; and the average years of schooling increase between 2.1 and 1.8 years. Employment at age 30 increases between 13 and 8 percentage points. ABC/CARE has substantial impacts on human capital accumulation and employment. The results strengthen when we compare treatment with the option of staying at home.
 
-\textbf{[JJH: Let's be more precise: show by category. Put this in the main text.][Step down $p$-values are now reported in Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} in the square brackets.]}
-
 \begin{sidewaystable}[!htbp]
+\textbf{[JJH: Why these 7?]}
 \centering
 \begin{threeparttable}
 \caption{Treatment Effects on Selected Outcomes, Males}\label{table:tescombinedmales}
@@ -22,6 +23,7 @@ Note: This table shows the treatment effects for categories outcomes that are im
 \doublespacing
 
 \begin{sidewaystable}[!htbp]
+\textbf{[JJH: Why these?]}
 \centering
 \begin{threeparttable}
 \caption{Treatment Effects on Selected Outcomes, Females$^*$}\label{table:tescombinedfemales}
@@ -37,16 +39,16 @@ $^*$For females, we do not report graduation from a four-years college because w
 \end{sidewaystable}
 \doublespacing
 
-The results for males are somewhat different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are also substantial. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between 19 and 24 thousand of 2014 USD after treatment. The effects strengthen when comparing treatment to alternative preschool. Separation from the mother and being placed in relatively low quality childcare centers have more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects}.}
+The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are also substantial. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between 19 and 24 thousand of 2014 USD after treatment. The effects strengthen when comparing treatment to alternative preschool. Separation from the mother and being placed in relatively low quality childcare centers have more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects}.}
 
-The results hold when using other definitions of control substitution (see Appendix~\ref{appendix:vsensitivity}). They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{appendix:vsensitivity}). \textbf{[Stepdown summary here.]} When using step down $p$-values (see Appendix~\ref{appendix:results} for the full set of step down $p$-values), the health results remain statistically significant for males, when comparing to the full control group and when fixing to alternative preschool. The education results remain statistically significant for females, when comparing to the full control group and when fixing to staying at home. \textbf{[JJH: Report by block.][Step down $p$-values are now included in Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales}.]} 
+The results hold when using other definitions of control substitution (see Appendix~\ref{appendix:vsensitivity}). They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{appendix:vsensitivity}). When using step down $p$-values (see Appendix~\ref{appendix:results} for the full set of step down $p$-values), the health results remain statistically significant for males, when comparing to the full control group and when fixing to alternative preschool. The education results remain statistically significant for females, when comparing to the full control group and when fixing to staying at home.
 
-The estimates contrasting the effects for females and males in (3) and (5) are not based on matching; the estimates in (4) and (6) are. For the matching estimates, we rely on observed, baseline characteristics. In Appendix~\ref{appendix:bvariables}, we explain our choice of these variables and we make a thorough analysis to conclude that there is little sensitivity to the choice of these variables.\footnote{We also present this sensitivity analysis changing the variables used to condition while estimating treatment effects and changing the variables used to construct the weights to account for attrition.}
+The estimates contrasting the effects for females and males in Columns (3) and (5) are not based on matching; the estimates in (4) and (6) are. For the matching estimates, we rely on observed, baseline characteristics. In Appendix~\ref{appendix:bvariables}, we explain our choice of these variables and we make a thorough analysis to conclude that there is little sensitivity to the choice of these variables.\footnote{We also present this sensitivity analysis changing the variables used to condition while estimating treatment effects and changing the variables used to construct the weights to account for attrition.}
 
-\textbf{[JJH: We need a test for equation of treatment effects across genders.][This is included in Table~\ref{table:genderdifference-tes} and described below.]}
-Finally, we test whether the estimated treatment effects are equal across genders. Table~\ref{table:genderdifference-tes} reports the two-sided $p$-values testing if the estimates in (1) of Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales} are equal. Males have larger treatment effects on parental income at age 21, labor income, drug use, and blood pressure outcomes. The treatment effects are significantly different for years of education, diastolic blood pressure, and hypertension. 
+Finally, we test whether estimated treatment effects are equal across genders. Table~\ref{table:genderdifference-tes} reports the two-sided $p$-values testing if the estimates in (1) of Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales} are equal. Males have larger treatment effects on parental income at age 21, labor income, drug use, and on the measures of blood pressure. The treatment effects are significantly different for years of education, diastolic blood pressure, and hypertension. \textbf{[JJH: What happens for full 95?]}
 
 \begin{sidewaystable}[!htbp]
+\textbf{[JJH: There are few gender differences! I thought we found more. The paper collapses with this table. Do a rank sign test.]}
 \centering
 \begin{threeparttable}
 \caption{Gender Differences of Treatment Effects}\label{table:genderdifference-tes}
@@ -55,7 +57,7 @@ Finally, we test whether the estimated treatment effects are equal across gender
 \end{scriptsize}
 \begin{tablenotes}
 \scriptsize
-Note: This table reproduces the control-group means and estimates reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales} (Effect). The Difference column reports the difference between the male and female treatment effects. The two-sided $p$-value tests whether that difference is equal to 0. The $p$-values are calculated using 1,000 bootstraps. 
+Note: This table reproduces the control-group means and estimates reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales} (Effect). The Difference column reports the difference between the male and female treatment effects. The two-sided $p$-value tests whether that difference is equal to 0. The $p$-values are calculated using 1,000 bootstraps.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
@@ -66,9 +68,9 @@ We consider a total of 95 outcomes that we classify in Appendix~\ref{appendix:re
 
 Given the large number of available variables from the numerous follow-ups, summarizing all treatment effects can overwhelm the reader. In a companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} aggregate the treatment effects by conducting a cost/benefit analysis. They show that the benefits from ABC/CARE are largely driven by its effects on males. The benefit/cost ratio is 10.19 for males and 2.61 for females. In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. They indicate that females benefit more from the program than do males.
 
-We find strong effects on education and employment. For females in comparison to alternative preschool, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when comparing to staying at home. The treatment advantage for males is only seen when compared to those males who attended alternative preschool, with none of the education or employment outcomes being significant and positive when compared to staying at home. 
+We find strong evidence of gender differences in education and employment. For females in comparison to alternative preschool, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when comparing to staying at home. Treatment advantage for males is only seen when compared to those males who attended alternative preschool, with none of the education or employment outcomes being significant and positive when compared to staying at home.
 
-To perform inference on these estimates, we test the hypothesis of whether the proportions are equal to 50\%. As Figure~\ref{fig:ppositive} shows, although the proportions for both genders are significantly greater than 50\%, the proportion is higher for females. When considering the proportion of outcomes that are both positive and significant at the 10\% level, we test the hypothesis whether the proportions are equal to 10\%.\footnote{Our inference accounts for the dependence across outcomes, as we explain in Section~\ref{sec:combining-functions}.} A similar pattern holds for this test as well, although the proportions are smaller. Across outcomes, the effects are stronger for males fixing the control group to alternate preschool, but stronger for females when fixing the control group to staying at home. This pattern holds in the individual treatment effects, the combining functions, and the results from \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.
+We test the hypothesis of whether the proportions are equal to 50\%. As Figure~\ref{fig:ppositive} shows, although the proportions for both genders are significantly greater than 50\%, the proportion is higher for females. When considering the proportion of outcomes that are both positive and significant at the 10\% level, we test the hypothesis whether the proportions are equal to 10\%.\footnote{Our inference accounts for the dependence across outcomes, as we explain in Section~\ref{sec:combining-functions}.} A similar pattern holds for this test as well, although the proportions are smaller. Across outcomes, the effects are stronger for males fixing the control group to alternate preschool, but stronger for females when fixing the control group to staying at home. This pattern holds in the individual treatment effects, the combining functions, and the cost/benefit analysis of \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.
 
 We next report estimates of the proportion of beneficial effects by outcome category and overall. The analysis is based on treatment effect \eqref{eq:effect}. Figure~\ref{fig:ppositive} displays the results from this analysis: ABC/CARE positively impacted a large percentage of the outcomes. We show the counts for treatment compared to the next best alternative chosen by parents in Figure~\ref{fig:ppositivenb}. Proportionately more outcomes are beneficial for females, but the proportions are high for both groups and well above the benchmark of 1/2. In Tables~\ref{table:abccare_rslt_pooled_counts} to \ref{table:abccare_rslt_female_counts_n10a10} of Appendix~\ref{appendix:results}, we document a large and precisely determined fraction of beneficial treatment effects well above 1/2 for both genders for categories of outcomes spanning the life cycle through the mid 30's.
 
@@ -103,14 +105,14 @@ Figures~\ref{fig:ppositivehome} and Figure~\ref{fig:ppositivealternative} adjust
 Note: Panel (a) percentage of outcomes displaying a positive treatment effect, comparing treatment to next best. Panel (b) percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level). Panel (c) displays the percentage of outcomes with a positive treatment effect, comparing treatment to staying at home. Panel (d) displays the percentage of outcomes with a positive treatment effect, comparing treatment to alternative childcare arrangements. Standard errors are based on the empirical bootstrap distribution. For Panel (b) we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.\\
 \end{sidewaysfigure}
 
-Finally, we present the estimates of the combining functions by outcome category. Figure~\ref{fig:cats-positive-significant} shows the estimated proportions that are significantly positive at the 10\% level. Consistent with the treatment effects above, control-group females tend to do better in alternative preschools than at home. This is especially true for parenting measures, IQ, education, and employment. Control-group males, on the other hand, do better at home, with more positive treatment effects in comparison to alternative preschool. The treatment effects on IQ and achievement scores, education, and employment are larger when fixing the control group to the alternative preschool. \textbf{[JJH: Report estimates here.][We moved Figure~\ref{fig:cats-positive-significant} up to be with this section.]}
+Finally, we present the estimates of the combining functions by outcome category. Figure~\ref{fig:cats-positive-significant} shows the estimated proportions that are significantly positive at the 10\% level. Consistent with the treatment effects above, control-group females tend to do better in alternative preschools than at home. This is especially true for parenting measures, IQ, education, and employment. Control-group males, on the other hand, do better at home, with more positive treatment effects in comparison to alternative preschool. The treatment effects on IQ and achievement scores, education, and employment are larger when fixing the control group to the alternative preschool.
 
 \begin{figure}[H]
 \centering
 \caption{Positively Impacted Outcomes by Category, ABC/CARE Males and Females}\label{fig:cats-positive-significant}
 \begin{subfigure}[h]{0.7\textwidth}
 	\centering
-	\caption{Treatment vs. Stay at Home, Significant at 10\% Level} 
+	\caption{Treatment vs. Stay at Home, Significant at 10\% Level}
 		\includegraphics[width=\textwidth]{output/epan_ipw_p0_cats1_sig10.eps}
 \end{subfigure}
 
