--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,1 +1,1 @@
-\noindent This paper estimates sharp gender differences in the life-cycle impacts across multiple domains of an enriched early childhood program targeted toward disadvantaged children. Evaluated by the method of random assignment, treatment and control subjects were followed through age 34. We document these differences and assess the impacts of the program on promoting or alleviating population differences in outcomes by gender. On many dimensions, boys benefit relatively more from high-quality early center-based programs. For them, home care, even in disadvantaged environments, is more beneficial than lower quality center care. This phenomenon is not found for girls. We investigate the sources of the differential impacts. Early childhood interventions differentially affect child-parent interactions depending on the gender of the child. \textbf{[Word Count: 117]}
+\noindent This paper estimates sharp gender differences in the life-cycle impacts across multiple domains of an influential enriched early childhood program targeted toward disadvantaged children that was evaluated by the method of random assignment. We document these differences and assess the impacts of the program on promoting or alleviating population differences in outcomes by gender. On many dimensions, boys benefit relatively more from high-quality early center-based programs. For them, home care, even in disadvantaged environments, is more beneficial than lower quality center care. This phenomenon is not found for girls. We investigate the sources of the differential impacts. Early childhood interventions differentially affect child-parent interactions depending on the gender of the child. \textbf{[Word Count: 111]} 
