--- a/output/abccare-gdiff-treatmenteffects-1.tex
+++ b/output/abccare-gdiff-treatmenteffects-1.tex
@@ -1,8 +1,8 @@
-\begin{tabular}{l l c c c c c c c c c}
+\begin{tabular}{l l c c c r c c c c r}
 \toprule
 \mc{1}{c}{Category} & \mc{1}{c}{Variable} & \mc{1}{c}{Age} & \mc{4}{c}{\textbf{Control Mean}} & \mc{4}{c}{\textbf{Treatment Effect}} \\
 \cmidrule(lr){4-7} \cmidrule(lr){8-11}
-&   & & Female & Male & Difference & $ p $ -value & Female & Male & Difference & $ p $ -value \\
+&   & & Male & Female & Difference & $ p $ -value & Male & Female & Difference & $ p $ -value \\
 \midrule
 Parental Income & Parental Labor Income & 3.5 & 13504.955 & 11464.967 & 2,039.988 & $ < $ 0.001 & 1,035.575 & 2,755.646 & -1720.072 & $ < $ 0.001 \\
  &  & 12 & 23868.104 & 20917.408 & 2,950.695 & 0.001 & 7,085.101 & 13632.505 & -6547.404 & $ < $ 0.001 \\
