--- a/output/abccare-gdiff-treatmenteffects-1.tex
+++ b/output/abccare-gdiff-treatmenteffects-1.tex
@@ -1,4 +1,4 @@
-\begin{tabular}{l l c c c r c c c c r}
+\begin{tabular}{l l c c c c r c c c r}
 \toprule
 \mc{1}{c}{Category} & \mc{1}{c}{Variable} & \mc{1}{c}{Age} & \mc{4}{c}{\textbf{Control Mean}} & \mc{4}{c}{\textbf{Treatment Effect}} \\
 \cmidrule(lr){4-7} \cmidrule(lr){8-11}
