--- a/output/abccare-proportion-summary-full.tex
+++ b/output/abccare-proportion-summary-full.tex
@@ -15,6 +15,7 @@ Crime & 4 & \textbf{0.000} & \textbf{0.000} & \textbf{0.000} \\
 Risky Behavior & 5 & 0.400 & \textbf{0.200} & \textbf{-0.200} \\
 Health & 22 & 0.500 & 0.682 & \textbf{0.182} \\
 Mental Health & 11 & 0.818 & 0.545 & \textbf{-0.273} \\
+\midrule
 All & 126 & 0.603 & 0.437 & \textbf{-0.167} \\
 \bottomrule
 \end{tabular}
