--- a/output/abccare-gdiff-treatmenteffects-all.tex
+++ b/output/abccare-gdiff-treatmenteffects-all.tex
@@ -1,8 +1,8 @@
-\begin{tabular}{l l c c c c r c c c r}
+\begin{tabular}{l c c c r c c c r}
 \toprule
-\mc{1}{c}{Category} & \mc{1}{c}{Variable} & \mc{1}{c}{Age} & \mc{4}{c}{\textbf{Control Mean}} & \mc{4}{c}{\textbf{Treatment Effect}} \\
-\cmidrule(lr){4-7} \cmidrule(lr){8-11}
-&   & & Male & Female & Difference & $ p $ -value & Male & Female & Difference & $ p $ -value \\
+ \mc{1}{c}{Variable} & \mc{4}{c}{\textbf{Control Mean}} & \mc{4}{c}{\textbf{Treatment Effect}} \\
+\cmidrule(lr){2-5} \cmidrule(lr){6-9}
+& Male & Female & Difference & $ p $ -value & Male & Female & Difference & $ p $ -value \\
 \midrule
 \bottomrule
 \end{tabular}
